--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "web-vitals": "^3.5.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.2.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
+    "@types/jest": "^30.0.0",
     "@types/react": "18.2.47",
     "@types/react-redux": "^7.1.33",
     "@types/testing-library__jest-dom": "5.14.9",
